--- a/desafio_SENAI/index.html
+++ b/desafio_SENAI/index.html
@@ -18,20 +18,62 @@
     <!-- Parte do cabeçalho -->
     <header>
         <!-- tag de navegação -->
-        <nav> </nav>
+        <!-- Logo -->
+        <a href="#"><img src="assets/senai.svg" alt="Logo"/></a>
+
+      <!-- Barra de navegação com links -->
+      <nav>
+        <a href="#">
+          <i class="fa-solid fa-house"></i>
+          Home
+        </a>
+        <a href="#">
+          <i class="fa-solid fa-book"></i>
+          Cursos          
+        </a>
+        <a href="#">
+          <i class="fa-solid fa-phone"></i>
+          Contato          
+        </a>
+        <a class="botao" href="#">
+          <i class="fa-solid fa-user"></i>
+          Cadastre-se
+        </a>
+      </nav>
     </header>
+<!-- Tag main -->
+<main class="destaque">
+    <img src="assets/destaque.jpg" alt="destaque de fundo">
 
-    <!-- Parte principal -->
-    <main>   </main>
+    <div class="destaqueTexto">
+      <h1>Aprendizagem <span>Online</span></h1>
+      <a href="#" class="botao2"><input type="submit" name="enviar" value="Acessar"></a>
+    </div>  
+  </main>
 
-    <!-- Sessão secundária -->
-    <section>    </section>
+  <!-- Tag section -->
+  <section> 
+    <!-- Seção secundária (Ex. Uma seção de posts) -->
+    <h2>Aprenda programação! Seja um desenvolvedor!! (SENAI-SP)</h2>
+    <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolorum ab minus eligendi velit amet inventore facere architecto, rem sapiente possimus aliquam neque ullam corrupti dicta ex sequi. Deserunt, magnam?</p>      
 
-    <!-- DIV para o WhatsApp -->
-    <div> </div>
+    <a href="#"><img src="assets/programa.jpg" alt="tela de programação" width="10px"></a>
+  
+    <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolorum ab minus eligendi velit amet inventore facere architecto, rem sapiente possimus aliquam neque ullam corrupti dicta ex sequi. Deserunt, magnam?</p>           
+  </section>
 
+  <!-- Div (WhatsApp) -->
+  <div class="fixed"><a href="#"><img src="assets/icons8-whatsapp-96.png" alt="logoWhatsapp"></a></div>
+
+  <!-- Tag footer -->
+  <footer>
     <!-- Rodapé -->
-    <footer> </footer>
+    <a href="#"><img src="assets/senai.svg" alt="Logo"/></a>
+    <div class="footerTexto">
+      <p>Central de relacionamento 0800-055-1000 </p>
+      <p>Copyright 2024 © Todos os direitos reservados.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
